--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_ENDPOINT=https://localhost:7195/api/
+# REACT_APP_API_ENDPOINT=https://localhost:7195/api/
+REACT_APP_API_ENDPOINT=http://kaungexchangeapi.nksoftwarehouse.com/api/
 REACT_APP_PRIVATE_KEY=nk7863711ksso3111a4e4133zwehtet9
