Fixed Wallet Transfer

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# REACT_APP_API_ENDPOINT=https://localhost:7195/api/
-REACT_APP_API_ENDPOINT=https://kaungexchangeapi.nksoftwarehouse.com/api/
+REACT_APP_API_ENDPOINT=https://localhost:7195/api/
+# REACT_APP_API_ENDPOINT=https://kaungexchangeapi.nksoftwarehouse.com/api/
 REACT_APP_PRIVATE_KEY=nk7863711ksso3111a4e4133zwehtet9
 REACT_APP_AUTHORIZATION=Basic MTExNjY1NjM6NjAtZGF5ZnJlZXRyaWFs
