--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_ENDPOINT=https://localhost:7124/api/
+REACT_APP_API_ENDPOINT=https://kaungexchangeapi.nksoftwarehouse.com/api/
 REACT_APP_PRIVATE_KEY=zwewaiyanhtetNkSoftwarehouse9911
